--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                 android:layout_marginRight="94dp"
                 android:autofillHints=""
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberSigned|number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
