-Reduced roll count to 1000 for performance reasons. -Added back button to toolbar for added user convenience.

--- a/src/main/res/menu/dropresultmenu.xml
+++ b/src/main/res/menu/dropresultmenu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/saveFile"
+        android:id="@+id/copyResults"
         android:icon="@drawable/ic_copybutton"
         android:title="@string/menu_copy"
         app:showAsAction="always" />
