-Errors will now be displayed if invalid input is detected. App will not proceed until issue is resolved. -Instruction text view will no longer reset when screen orientation changes. Hints will still reset, and there doesn't appear to be a fix. -Drop rate will always be converted to decimal when user rolls and calculation starts. -Hit rate colour will only turn green when it exceeds the drop rate.

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -156,6 +156,7 @@
                 android:layout_marginRight="102dp"
                 android:autofillHints=""
                 android:ems="10"
+                android:freezesText="false"
                 android:hint="@string/text_percentHint"
                 android:inputType="number|numberDecimal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -168,6 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginTop="116dp"
+                android:freezesText="true"
                 android:text="@string/text_enterPercent"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
